<resources>
    <string name="common_name">通用</string>
    <string name="common_package_name" translatable="false">configs.common</string>
    <string name="dialog_title">重要提示</string>
    <string name="enter">确认</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="date" translatable="false">%1$s %2$s</string>
    <string name="year">%d年</string>
    <string name="month">%d月</string>
    <string name="day">%d日</string>
    <string name="week">周%d</string>
    <string name="hour">%d时</string>
    <string name="minute">%d分</string>
    <string name="second">%d秒</string>
    <string name="millisecond">%d毫秒</string>
    <string name="hours">%d小时</string>
    <string name="minutes">%d分钟</string>
    <string name="notification_on_tips">前台服务和录屏服务需要发送通知，请授予应用发送通知的权限</string>
    <string name="capture_service_running_channel_name">前台服务通知</string>
    <string name="capture_service_running_channel_tips">软件服务正在前台运行的通知，禁用可隐藏通知</string>
    <string name="capture_service_notification_channel_name">录屏服务快捷关闭通知</string>
    <string name="capture_service_notification_channel_tips">能在通知栏快速关闭录屏服务</string>
    <string name="capture_service_notification_title">录屏服务 正在运行</string>
    <string name="capture_service_notification_text">点按即可关闭服务和通知</string>
    <string name="location_on_tips">地理围栏需要精确的地理位置，请授予应用获取地理位置的权限</string>
    <string name="home">主页</string>
    <string name="task">任务</string>
    <string name="function">自定义</string>
    <string name="blueprint">蓝图</string>
    <string name="setting">设置</string>
    <string name="accessibility_service_on">无障碍服务已开启</string>
    <string name="accessibility_service_off">无障碍服务已关闭</string>
    <string name="accessibility_service_on_tips">开启无障碍服务，请依次点击“已下载的应用”->“%1$s”，然后开启服务。</string>
    <string name="accessibility_service_off_tips">本应用需要先开启无障碍服务才能使用</string>
    <string name="service_on">功能已开启</string>
    <string name="service_off">功能已关闭</string>
    <string name="service_des">自动点击服务，开启之后能够使用自动点击功能</string>
    <string name="capture_service_on">录屏已开启</string>
    <string name="capture_service_off">录屏已关闭</string>
    <string name="capture_service_des">屏幕录制服务，开启之后能够使用图片点击与检测功能</string>
    <string name="capture_service_on_tips">当前任务需要检测图片，请开启屏幕录制</string>
    <string name="capture_service_open_tips">当前设置为优先使用无障碍截屏，无需打开录屏</string>
    <string name="play_tile_service_title">手动悬浮窗</string>
    <string name="package_tile_service_title">当前活动</string>
    <string name="package_tile_service_tips">应用包名为：%1$s\n活动名为：%2$s</string>
    <string name="report_running_error_tips">检测到应用出现崩溃，是否加入QQ群去上报错误？</string>
    <string name="report_running_error_copied">已复制</string>
    <string name="report_running_error_copy">复制</string>
    <string name="report_running_error_copy_and_join">复制并加群</string>
    <string name="ignore_battery">电量限制</string>
    <string name="open_ignore_battery">去解除电量限制</string>
    <string name="ignore_battery_tips">应用未获取到电量“无限制”的权限，后台运行时可能会被系统关闭。</string>
    <string name="lock_background">稳定后台</string>
    <string name="open_auto_start">去开启自启动</string>
    <string name="auto_start_tips">本应用需要长时间在后台驻留，而一些系统会很激进的杀死在后台运行的任务，如果应用被授予自启动权限，相当于加入的系统白名单，就不会那么容易被系统杀死了。</string>
    <string name="goto_lock_background">去锁定后台</string>
    <string name="lock_background_tips">锁定后台使本应用在后台稳定运行，也可以防止清理后台任务时意外中止本应用。</string>
    <string name="tutorial">教程</string>
    <string name="goto_tutorial">查看教程</string>
    <string name="tutorial_tips">当你不知道怎么使用本应用的时候，请点击这里查看教程。</string>
    <string name="shell_code">便捷的Shell命令</string>
    <string name="shell_code_copy">复制代码</string>
    <string name="shell_code_exec">执行</string>
    <string name="shizuku_done">已执行</string>
    <string name="auto_restart_accessibility_service">自动重启无障碍服务</string>
    <string name="auto_restart_accessibility_service_tips">因一些不可描述的原因导致无障碍服务崩溃后，任务无法正常运行，手动重启无障碍服务又略显麻烦，所以可以授予应用“写入安全设置”的权限让应用能重启无障碍服务。</string>
    <string name="auto_allow_capture">自动授予录屏权限</string>
    <string name="auto_allow_capture_tips">软件请求录屏权限会弹窗让用户手动授予录屏权限，执行任务时需要主动去处理授予操作，所以可以授予应用“自动允许录屏”的权限来免去麻烦。但是，这可能会带来一些安全隐患。如果你不信任本软件，请不要授予！！！</string>
    <string name="restart_accessibility_service">重启无障碍服务</string>
    <string name="restart_accessibility_service_error">权限不足，重启无障碍服务失败</string>
    <string name="restart_accessibility_service_complete">重启完毕</string>
    <string name="tag_no">未分类</string>
    <string name="tag_shortcut">快捷方式</string>
    <string name="tag_add">添加新的标签</string>
    <string name="tag_delete">确认要删除这个标签吗？</string>
    <string name="select_all">全选</string>
    <string name="delete_task">删除</string>
    <string name="export_task">导出</string>
    <string name="export_task_tips">导出任务配置并发送</string>
    <string name="move_task">标签</string>
    <string name="copy_task">复制</string>
    <string name="exchange_task">转换</string>
    <string name="exchange_task_1">不保留转换</string>
    <string name="exchange_task_2">保留转换</string>
    <string name="exchange_task_tips">任务转换为自定义卡之后无法恢复，任务内自定义卡无法跟随任务转换，确定要转换选中的任务吗？</string>
    <string name="copy_to">复制到</string>
    <string name="delete_task_tips">任务删除之后无法恢复，确定要删除选中的任务吗？</string>
    <string name="task_title">任务</string>
    <string name="task_add">添加任务</string>
    <string name="task_change_title">修改标题</string>
    <string name="task_copy_title">%s_复制</string>
    <string name="function_title_common">通用自定义卡片</string>
    <string name="function_title">任务内自定义卡片</string>
    <string name="function_add">添加自定义卡片</string>
    <string name="function_record">录制自定义卡片</string>
    <string name="function_record_tips">请先点击开始录制按钮</string>
    <string name="function_start">自定义开始</string>
    <string name="function_end">自定义结束</string>
    <string name="function_pin_hint">针脚名</string>
    <string name="function_just_call">仅获取状态</string>
    <string name="function_fast_end">结束时中止内部执行</string>
    <string name="export_function_error_tips">无法导出非通用自定义卡片</string>
    <string name="delete_function_tips">自定义卡片删除之后无法恢复，确定要删除吗？</string>
    <string name="attribute_title">任务内变量</string>
    <string name="attribute_title_common">全局变量</string>
    <string name="attribute_title_function">卡片内变量</string>
    <string name="attribute_hint">变量名</string>
    <string name="attribute_add">添加变量</string>
    <string name="attribute_add_error">变量名已存在，无法再次添加同名变量</string>
    <string name="card_error_tips">存在%d个问题卡片</string>
    <string name="error_exist_action_tips">结果针脚未被使用</string>
    <string name="error_function_reference_action_tips">未找到引用的自定义卡片</string>
    <string name="error_variable_action_tips">未找到引用的变量</string>
    <string name="error_no_super_user_permission">没有权限执行</string>
    <string name="warning_wait_if_action_tips">检查间隔过短，可能引起卡顿</string>
    <string name="action_subtitle_add_pin">添加针脚</string>
    <string name="action_subtitle_add_execute">添加执行</string>
    <string name="action_subtitle_add_des">修改备注</string>
    <string name="action_subtitle_execute">执行</string>
    <string name="action_start_subtitle_restart">任务重入</string>
    <string name="action_start_subtitle_break">中断条件</string>
    <string name="action_start_subtitle_enable">启用</string>
    <string name="action_start_subtitle_enable_true">已启用</string>
    <string name="action_start_subtitle_enable_false">未启用</string>
    <string name="action_normal_start_title">自定义条件执行</string>
    <string name="action_normal_start_subtitle_condition">开始条件</string>
    <string name="action_outer_start_title">应用外调用</string>
    <string name="action_outer_start_subtitle_url">链接</string>
    <string name="action_outer_start_subtitle_copy">复制链接</string>
    <string name="action_outer_start_subtitle_shortcut">快捷方式</string>
    <string name="action_outer_start_subtitle_shortcut_create">创建</string>
    <string name="action_manual_start_title">手动执行</string>
    <string name="action_inner_start_title">并行内部执行</string>
    <string name="action_app_start_title">进应用或界面时执行</string>
    <string name="action_app_start_subtitle_break">自动中断</string>
    <string name="action_app_start_subtitle_info">触发界面</string>
    <string name="action_time_start_title">定时执行</string>
    <string name="action_time_start_subtitle_date">日期</string>
    <string name="action_time_start_subtitle_time">时间</string>
    <string name="action_time_start_subtitle_periodic">间隔</string>
    <string name="action_time_start_tips">未设置间隔时设置00:00为间隔24小时\n有间隔时设置00:00为移除间隔</string>
    <string name="action_battery_start_title">电池状态变更时执行</string>
    <string name="action_battery_start_subtitle_state">状态</string>
    <string name="action_battery_start_subtitle_battery">电量</string>
    <string name="action_notification_start_title">收到新通知时执行</string>
    <string name="action_notification_start_subtitle_text">匹配文本</string>
    <string name="action_notification_start_subtitle_notice">通知文本</string>
    <string name="action_network_start_title">网络变更时执行</string>
    <string name="action_network_start_subtitle_network">网络</string>
    <string name="action_app_state_title">当前界面</string>
    <string name="action_app_state_subtitle_where">界面</string>
    <string name="action_battery_state_title">电池状态</string>
    <string name="action_battery_state_subtitle_state">状态</string>
    <string name="action_battery_state_subtitle_battery">电量</string>
    <string name="action_screen_state_title">屏幕状态</string>
    <string name="action_screen_state_subtitle_state">状态</string>
    <string name="action_capture_state_title">录屏状态</string>
    <string name="action_capture_state_subtitle_state">开启</string>
    <string name="action_image_state_title">获取图片</string>
    <string name="action_color_state_title">获取颜色</string>
    <string name="action_ocr_text_state_title">获取文本(OCR)</string>
    <string name="action_ocr_text_state_subtitle_similar">可信度</string>
    <string name="action_date_state_title">日期</string>
    <string name="action_date_state_subtitle_year">年</string>
    <string name="action_date_state_subtitle_month">月</string>
    <string name="action_date_state_subtitle_day">日</string>
    <string name="action_date_state_subtitle_weekday">周几</string>
    <string name="action_time_state_title">时间</string>
    <string name="action_time_state_subtitle_hour">时</string>
    <string name="action_time_state_subtitle_minute">分</string>
    <string name="action_time_state_subtitle_second">秒</string>
    <string name="action_time_state_subtitle_timestamp">时间戳</string>
    <string name="action_network_state_title">网络状态</string>
    <string name="action_network_state_subtitle_network">网络</string>
    <string name="action_check_subtitle_result">结果</string>
    <string name="action_in_app_check_title">在应用或界面内</string>
    <string name="action_in_app_check_subtitle_who">待测界面</string>
    <string name="action_battery_state_check_title">电池状态对比</string>
    <string name="action_battery_state_check_subtitle_state">状态</string>
    <string name="action_battery_state_check_subtitle_check_state">待测状态</string>
    <string name="action_screen_state_check_title">屏幕状态对比</string>
    <string name="action_screen_state_check_subtitle_state">状态</string>
    <string name="action_screen_state_check_subtitle_check_state">待测状态</string>
    <string name="action_exist_texts_check_title">界面内所有文本</string>
    <string name="action_exist_text_check_title">界面内存在文本</string>
    <string name="action_exist_text_check_subtitle_just">屏幕内</string>
    <string name="action_exist_text_ocr_check_title">界面内存在文本(OCR)</string>
    <string name="action_exist_nodes_check_title">界面内所有控件</string>
    <string name="action_exist_node_check_title">界面内存在控件</string>
    <string name="action_image_check_title">图片内存在图片</string>
    <string name="action_image_check_subtitle_other">匹配图片</string>
    <string name="action_exist_image_check_title">界面内存在图片</string>
    <string name="picker_widget_preview_title">选择控件</string>
    <string name="picker_widget_preview_subtitle_id">ID：%1$s</string>
    <string name="picker_widget_preview_subtitle_level">深度优先</string>
</resources>