<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accessibilityButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/fill_button_background_check"
                android:checkable="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/accessibility_service_off"
                android:textColor="@color/button_container_check"
                android:textSize="13sp"
                app:icon="@drawable/icon_accessibility"
                app:iconSize="36dp"
                app:iconTint="@color/button_container_check"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/serviceButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fill_button_background_check"
                android:checkable="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/service_off"
                android:textColor="@color/button_container_check"
                android:textSize="13sp"
                app:icon="@drawable/icon_service"
                app:iconSize="36dp"
                app:iconTint="@color/button_container_check"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/captureButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/fill_button_background_check"
                android:checkable="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/capture_service_off"
                android:textColor="@color/button_container_check"
                android:textSize="13sp"
                app:icon="@drawable/icon_capture"
                app:iconSize="36dp"
                app:iconTint="@color/button_container_check"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ignoreBatteryBox"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_battery"
                        android:tint="?attr/colorPrimary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/ignore_battery"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/ignore_battery_tips"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ignoreBatteryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/open_ignore_battery"
                    app:icon="@drawable/icon_battery" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tabMode="scrollable" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/folderButton"
                style="@style/Theme.TouchTool.IconButton.Filled"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                app:icon="@drawable/icon_folder" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/activity_home_task_item" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottomBar"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="32dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectAllButton"
                    style="@style/Theme.TouchTool.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_all"
                    app:icon="@drawable/icon_check" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteButton"
                    style="@style/Theme.TouchTool.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_task"
                    app:icon="@drawable/icon_delete" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exportButton"
                    style="@style/Theme.TouchTool.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/export_task"
                    app:icon="@drawable/icon_export" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/moveButton"
                    style="@style/Theme.TouchTool.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/move_task"
                    app:icon="@drawable/icon_move" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    style="@style/Theme.TouchTool.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    app:icon="@drawable/icon_close" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/icon_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>