<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:text="@string/picker_widget_preview_title"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/idTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:text="@string/picker_widget_preview_subtitle_id"
                android:textSize="11sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/levelTitle"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:gravity="center_vertical"
                android:text="@string/picker_widget_preview_subtitle_level"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                style="@style/Theme.TouchTool.IconButton.Filled"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:icon="@drawable/icon_back" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Theme.TouchTool.IconButton.Filled"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="8dp"
                app:icon="@drawable/icon_menu_save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pickerButton"
                style="@style/Theme.TouchTool.IconButton.Filled"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:icon="@drawable/icon_text" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>