<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center_vertical|end">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_subtitle_add_execute"
                android:textSize="11sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addExecuteButton"
                style="@style/Theme.TouchTool.IconButton.Outlined"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginHorizontal="4dp"
                app:icon="@drawable/icon_add"
                app:iconSize="16dp"
                app:iconTint="?attr/colorOutline" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="4dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center_vertical|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addPinButton"
                style="@style/Theme.TouchTool.IconButton.Outlined"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginHorizontal="4dp"
                app:icon="@drawable/icon_add"
                app:iconSize="16dp"
                app:iconTint="?attr/colorOutline" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_subtitle_add_pin"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/stateBox"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center_vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function_just_call"
                android:textSize="11sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/justCallSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:translationX="-8dp" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="4dp" />

        <LinearLayout
            android:id="@+id/fastEndBox"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center_vertical">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/fastEndSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:translationX="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function_fast_end"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
